--- a/package.json
+++ b/package.json
@@ -4,17 +4,26 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:api": "tsx src/server/api.ts",
     "build": "next build",
     "start": "next start",
+    "start:api": "tsx src/server/api.ts",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
     "format": "biome format --write ."
   },
   "dependencies": {
+    "@hono/node-server": "^1.19.9",
+    "@hono/trpc-server": "^0.4.2",
+    "@supabase/supabase-js": "^2.95.3",
     "@tanstack/react-query": "^5.90.20",
     "@tremor/react": "^4.0.0-beta-tremor-v4.4",
+    "@trpc/client": "^11.9.0",
+    "@trpc/server": "^11.9.0",
+    "@upstash/redis": "^1.36.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "hono": "^4.11.8",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
@@ -22,6 +31,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.6",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
@@ -30,8 +40,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eventsource": "^4.1.0",
     "shadcn": "^3.8.4",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
