--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "echarts": "^6.0.0",
     "hono": "^4.11.8",
     "lucide-react": "^0.563.0",
+    "maplibre-gl": "^5.17.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
