Add automated accessibility scan and dependency audit script

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "start:api": "tsx src/server/api.ts",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
-    "format": "biome format --write ."
+    "format": "biome format --write .",
+    "a11y:scan": "tsx scripts/quality/a11y-scan.ts",
+    "audit:deps": "npm audit --omit=dev"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.9",
@@ -41,6 +43,7 @@
     "zustand": "^5.0.11"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.11.1",
     "@biomejs/biome": "^2.3.14",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
@@ -48,6 +51,7 @@
     "@types/react-dom": "^19",
     "concurrently": "^9.2.1",
     "eventsource": "^4.1.0",
+    "playwright": "^1.58.2",
     "shadcn": "^3.8.4",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
