--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint:fix": "biome check --write .",
     "format": "biome format --write .",
     "a11y:scan": "tsx scripts/quality/a11y-scan.ts",
-    "audit:deps": "npm audit --omit=dev"
+    "audit:deps": "npm audit --omit=dev",
+    "load:sse": "tsx scripts/quality/sse-load-test.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.9",
